--- a/src/Templates/ModelTemplate.cshtml
+++ b/src/Templates/ModelTemplate.cshtml
@@ -111,14 +111,7 @@ else
         }
     }
     <text>
-    @{
-        var modelDoc = Model.Documentation.ToSentence();
-        if (string.IsNullOrWhiteSpace(modelDoc))
-        {
-            modelDoc = "...";
-        }
-    }
-    @WrapComment("// ", $"{Model.Name} {modelDoc}")
+    @WrapComment("// ", $"{Model.Name} {Model.Documentation.ToSentence()}")
     type @(Model.Name) struct {
     @(Model.AddHTTPResponse())
     @(Model.Fields())
@@ -322,69 +315,67 @@ else
     </text>
 }
 
-@if (Model is PageTypeGo)
+@if (Model is PageTypeGo modelPageType)
 {
-    var pageType = (PageTypeGo)Model;
-    var itemName = pageType.ItemName;
-    var itemType = pageType.ElementType.Name;
+    var itemName = modelPageType.ItemName;
+    var itemType = modelPageType.ElementType.Name;
     <text>
     @EmptyLine
     // Next advances to the next page of values.  If there was an error making
     // the request the page does not advance and the error is returned.
     func (page * @Model.Name) Next() error {
-    next, err := page.@(pageType.FnFieldName)(page.@pageType.ResultFieldName)
+    next, err := page.@(modelPageType.FnFieldName)(page.@modelPageType.ResultFieldName)
     if err != nil {
     return err
     }
-    page.@pageType.ResultFieldName = next
+    page.@modelPageType.ResultFieldName = next
     return nil
     }
 
     // NotDone returns true if the page enumeration should be started or is not yet complete.
     func (page @Model.Name) NotDone() bool {
-    return !page.@(pageType.ResultFieldName).IsEmpty()
+    return !page.@(modelPageType.ResultFieldName).IsEmpty()
     }
 
     // Response returns the raw server response from the last page request.
-    func (page @Model.Name) Response() @pageType.ContentType.Name {
-    return page.@(pageType.ResultFieldName)
-    }
+    func (page @Model.Name) Response() @modelPageType.ContentType.Name {
+    return page.@modelPageType.ResultFieldName
+        }
 
     // Values returns the slice of values for the current page or nil if there are no values.
     func (page @Model.Name) Values() []@(itemType) {
-    if page.@(pageType.ResultFieldName).IsEmpty() {
+    if page.@(modelPageType.ResultFieldName).IsEmpty() {
     return nil
     }
-    return *page.@(pageType.ResultFieldName).@itemName
+    return *page.@(modelPageType.ResultFieldName).@itemName
     }
     </text>
 }
 
-@if (Model is IteratorTypeGo)
+@if (Model is IteratorTypeGo iterType)
 {
-    var iterType = (IteratorTypeGo)Model;
     var itemType = iterType.PageType.ElementType;
     var itemTypeName = iterType.PageType.ElementType.Name;
     <text>
     // Next advances to the next value.  If there was an error making
     // the request the iterator does not advance and the error is returned.
     func (iter * @Model.Name) Next() error {
-    iter.@(iterType.IndexField)++
-    if iter.@(iterType.IndexField) < len(iter. @(iterType.PageField).Values()) {
+    iter.@iterType.IndexField++
+    if iter.@iterType.IndexField < len(iter. @(iterType.PageField).Values()) {
     return nil
     }
     err := iter.@(iterType.PageField).Next()
     if err != nil {
-    iter. @(iterType.IndexField)--
+    iter. @iterType.IndexField--
     return err
     }
-    iter.@(iterType.IndexField) = 0
+    iter.@iterType.IndexField = 0
     return nil
     }
 
     // NotDone returns true if the enumeration should be started or is not yet complete.
     func (iter @Model.Name) NotDone() bool {
-    return iter.@(iterType.PageField).NotDone() && iter.@(iterType.IndexField) < len(iter. @(iterType.PageField).Values())
+    return iter.@(iterType.PageField).NotDone() && iter.@iterType.IndexField < len(iter. @(iterType.PageField).Values())
     }
 
     // Response returns the raw server response from the last page request.
@@ -398,7 +389,7 @@ else
     if !iter.@(iterType.PageField).NotDone() {
     return @itemType.GetZeroInitExpression()
     }
-    return iter.@(iterType.PageField).Values()[iter.@(iterType.IndexField)]
+    return iter.@(iterType.PageField).Values()[iter.@iterType.IndexField]
     }
     </text>
 }
