Add support for deprecation. (#90)
* Add support for deprecation.

The modeler has exposed deprecation settings and messages for types,
methods, and properties.  When true, emit the deprecation message if
available else a default message.

* Fixes based on feedback.

* Move deprecated comment to its own paragraph.

--- a/src/Templates/EnumTemplate.cshtml
+++ b/src/Templates/EnumTemplate.cshtml
@@ -16,6 +16,16 @@ else
         @WrapComment("// ", Model.Documentation)
     </text>
 }
+@if (Model.Deprecated)
+{
+    var message = "This type has been deprecated.";
+    if (!string.IsNullOrWhiteSpace(Model.DeprecationMessage))
+    {
+        message = Model.DeprecationMessage;
+    }
+@://
+@:@WrapComment("// Deprecated: ", message)
+}
 type @Model.Name string
 
 @EmptyLine
