Fixed codegen for future's Result() method
If the future.PollingURL() is not the empty string then use that to
retrieve the final result; this is typical for LROs that return both
Location and AsyncOperation headers.
Update validation error to use the new constructor method; this required
updating to the latest go-autorest version.
Fixed some broken tests (port of fix that's in master).

--- a/src/Templates/ModelTemplate.cshtml
+++ b/src/Templates/ModelTemplate.cshtml
@@ -441,8 +441,17 @@ else
     @resultVarTarget, err = client.@(ftg.ResponderMethodName)(future.Response())
     return
     }
+    var req *http.Request
     var resp *http.Response
-    resp, err = autorest.SendWithSender(client, autorest.ChangeToGet(future.req),
+    if future.PollingURL() != "" {
+        req, err = http.NewRequest(http.MethodGet, future.PollingURL(), nil)
+        if err != nil {
+            return
+        }
+    } else {
+        req = autorest.ChangeToGet(future.req)
+    }
+    resp, err = autorest.SendWithSender(client, req,
     autorest.DoRetryForStatusCodes(client.RetryAttempts, client.RetryDuration, autorest.StatusCodesForRetry...))
     if err != nil {
     return
