--- a/src/Templates/VersionTemplate.cshtml
+++ b/src/Templates/VersionTemplate.cshtml
@@ -7,7 +7,16 @@
 @using System.Collections.Generic
 
 @inherits AutoRest.Core.Template<AutoRest.Go.Model.CodeModelGo>
+@{ 
+    var verStr = $"\"{Model.Version}\"";
+}
 package @Model.Namespace
+@EmptyLine
+@if (Model.UseOneVer)
+{
+    verStr = CodeModelGo.OneVerString;
+@:import "github.com/Azure/azure-sdk-for-go/version"
+}
 @EmptyLine
 @Header("// ")
 
@@ -22,5 +31,5 @@ func UserAgent() string {
 @EmptyLine
 // Version returns the semantic version (see http://semver.org) of the client.
 func Version() string {
-  return "@(Model.Version)"
+  return @verStr
 }
