Close the response body.
Previously the response body was closed only if the method returned
content via the response body; this is incorrect and leads to leaked
connections.  Now the responders will close the response body except
when the method explicitly returns a stream.

--- a/src/Templates/MethodTemplate.cshtml
+++ b/src/Templates/MethodTemplate.cshtml
@@ -149,6 +149,10 @@ func (client @(Model.MethodGroup.ClientName)) @(opIdCamelCase)Responder(resp pip
 	if resp == nil {
 		return nil, err
 	}
+@if (!Model.ReturnType.Body.IsStreamType() && !Model.ReturnValueRequiresUnmarshalling())
+{
+    @:resp.Response().Body.Close()
+}
 @if (Model.ReturnValueRequiresUnmarshalling())
 {
     var unmarshalInto = "result";
