Generate func returning all values for an enum type.
For each enum const type, generate a function that returns an array of
all the possible values for that type.

--- a/src/Templates/EnumTemplate.cshtml
+++ b/src/Templates/EnumTemplate.cshtml
@@ -31,11 +31,15 @@ type @Model.Name string
 @EmptyLine
 @if (Model.Values.Any())
 {
+    var possibleFuncName = $"Possible{Model.Name}Values";
+    var orderedValues = new List<string>();
     <text>
     const (
     @foreach (var v in Model.Values.OrderBy(v => v.Name))
     {
         var comment = string.Empty;
+        var memName = CodeNamerGo.Instance.GetEnumMemberName(v.Name);
+        orderedValues.Add(memName);
 
         if (string.IsNullOrWhiteSpace(v.Description))
         {
@@ -53,9 +57,13 @@ type @Model.Name string
             </text>
         }
         <text>
-        @(CodeNamerGo.Instance.GetEnumMemberName(v.Name)) @(Model.Name) = "@(v.SerializedName)"
+        @(memName) @(Model.Name) = "@(v.SerializedName)"
         </text>
     }
     )
+    // @possibleFuncName returns an array of possible values for the @Model.Name const type.
+    func @(possibleFuncName)() [@(Model.Values.Count)]@Model.Name {
+        return [@(Model.Values.Count)]@(Model.Name){@(string.Join(',', orderedValues))}
+    }
     </text>
 }
