--- a/src/Templates/VersionTemplate.cshtml
+++ b/src/Templates/VersionTemplate.cshtml
@@ -19,10 +19,10 @@ package @Model.Namespace
 }
 @EmptyLine
 @Header("// ")
-
+@EmptyLine
+@CodeModelGo.GetGeneratorVersionStamp()
 @EmptyLine
 
-@EmptyLine
 // UserAgent returns the UserAgent string to use when sending http.Requests.
 func UserAgent() string {
     return "@(Model.UserAgent)"
