Make possible enum values funcs return slices.
In order to avoid breaking changes when enums are added make the funcs
return a slice instead of an array.

--- a/src/Templates/EnumTemplate.cshtml
+++ b/src/Templates/EnumTemplate.cshtml
@@ -62,8 +62,8 @@ type @Model.Name string
     }
     )
     // @possibleFuncName returns an array of possible values for the @Model.Name const type.
-    func @(possibleFuncName)() [@(Model.Values.Count)]@Model.Name {
-        return [@(Model.Values.Count)]@(Model.Name){@(string.Join(',', orderedValues))}
+    func @(possibleFuncName)() []@Model.Name {
+        return []@(Model.Name){@(string.Join(',', orderedValues))}
     }
     </text>
 }
