Better field name for wrapped arrays.
For the wrapper type around an array name the field 'Items'.
Added ResponseError interface back as it's needed for tests.
Fixed array tests, the ones for time types have been disabled.

--- a/src/Templates/MethodTemplate.cshtml
+++ b/src/Templates/MethodTemplate.cshtml
@@ -170,7 +170,7 @@ func (client @(Model.MethodGroup.ClientName)) @(opIdCamelCase)Responder(resp pip
     var unmarshalInto = "result";
     if (Model.ReturnValueIsWrapperType() && !Model.ReturnValueIsXmlWrapped())
     {
-        unmarshalInto = "&result.Value";
+        unmarshalInto = $"&result.{Model.ReturnValueWrapperTypeFieldName()}";
     }
 <text>
     result:= &@(Model.MethodReturnType){rawResponse: resp.Response()}
