--- a/src/Templates/ResponseError.cshtml
+++ b/src/Templates/ResponseError.cshtml
@@ -25,6 +25,14 @@ import (
 // if you want to provide custom error handling set this variable to your constructor function
 var responseErrorFactory func(cause error, response *http.Response, description string) error
 
+// ResponseError identifies a responder-generated network or response parsing error.
+type ResponseError interface {
+	// Error exposes the Error(), Temporary() and Timeout() methods.
+	net.Error // Includes the Go error interface
+	// Response returns the HTTP response. You may examine this but you should not modify it.
+	Response() *http.Response
+}
+
 // NewResponseError creates an error object that implements the error interface.
 func NewResponseError(cause error, response *http.Response, description string) error {
 	if responseErrorFactory != nil {
